<?xml version="1.0" encoding="utf-8"?>
<!--
    Layout para la pantalla de registro del usuario.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <!-- Título superior -->
        <TextView
            android:id="@+id/tituloTienda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_tienda"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#3A59D1"
            android:layout_marginBottom="16dp" />

        <!-- Logo de la tienda (Estuvo dificil de elegir jeje) -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="24dp" />

        <!-- Mensaje para proponer la suscripción -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/subtitulo_registro"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginBottom="16dp" />

        <!-- Nombre -->
        <EditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            android:inputType="textPersonName"
            android:background="@drawable/edit_text_border"
            android:textColorHint="#999999"
            android:textColor="#000000"
            android:layout_marginBottom="12dp" />

        <!-- Correo -->
        <EditText
            android:id="@+id/editCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_correo"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_border"
            android:textColorHint="#999999"
            android:textColor="#000000"
            android:layout_marginBottom="12dp" />

        <!-- Mensaje para preguntar por interes del momento y recomendar cosas (Pienso a futuri) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pregunta_interes"
            android:textColor="#000000"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <!-- Grupo de intereses -->
        <RadioGroup
            android:id="@+id/radioGroupInteres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioVideojuegos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion_videojuegos"
                android:buttonTint="#B5FCCD"
                android:textColor="#000000"
                />

            <RadioButton
                android:id="@+id/radioFiguras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion_figuras"
                android:buttonTint="#B5FCCD"
                android:textColor="#000000"
                />

            <RadioButton
                android:id="@+id/radioPeliculas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion_peliculas"
                android:buttonTint="#B5FCCD"
                android:textColor="#000000" />

            <RadioButton
                android:id="@+id/radioLibros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcion_libros"
                android:buttonTint="#B5FCCD"
                android:textColor="#000000" />
        </RadioGroup>

        <!-- Se quieren notiicaciones?... -->
        <CheckBox
            android:id="@+id/checkNotificaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_notificaciones"
            android:buttonTint="#B5FCCD"
            android:textColor="#000000"
            android:layout_marginTop="16dp" />

        <!-- Botón registrar -->
        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_registrarse"
            android:layout_marginTop="24dp"
            android:backgroundTint="#7AC6D2"
            android:textColor="#ffffff" />

        <!-- Botón tienda. Pasamos a la logica principal de la tienda, osea el catalogo.-->
        <Button
            android:id="@+id/btnEntrarTienda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_entrar_tienda"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#3D90D7"
            android:textColor="#ffffff" />
    </LinearLayout>
</ScrollView>
