<?xml version="1.0" encoding="utf-8"?>
<!-- Layout perfil -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="24dp">

    <!-- Imagen del perfil -->
    <ImageView
        android:id="@+id/fotoPerfil"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/default_avatar"
        android:scaleType="centerCrop"
        android:layout_marginBottom="24dp"
        android:background="@drawable/circle_background"
        android:clipToOutline="true" />

    <!-- Nombre del usuario -->
    <TextView
        android:id="@+id/textNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invited_user"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginBottom="8dp" />

    <!-- Correo del usuario -->
    <TextView
        android:id="@+id/textCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_email"
        android:textColor="#000000"
        android:layout_marginBottom="24dp" />

    <!-- Dirección del usuario -->
    <TextView
        android:id="@+id/textDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion_envio_placeholder"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:textColor="#000000"/>

    <!-- Botón para editar dirección -->
    <Button
        android:id="@+id/btnEditarDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar_direccion"
        android:layout_marginTop="8dp"
        android:backgroundTint="#4E71FF"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="12dp"/>


    <!-- Botón editar perfil -->
    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar_perfil"
        android:backgroundTint="#129990"
        android:textColor="#ffffff"
        android:layout_marginBottom="12dp" />


    <!-- Botón para volver al catálogo -->
    <Button
        android:id="@+id/btnVolverCatalogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver_catalogo"
        android:backgroundTint="#096B68"
        android:textColor="#ffffff"
        android:layout_marginBottom="12dp" />


    <!-- Botón cerrar sesión -->
    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion"
        android:backgroundTint="#D9534F"
        android:textColor="#ffffff" />
</LinearLayout>