<?xml version="1.0" encoding="utf-8"?>
<!-- Layout para ingresar los datos bancarios para hacer una compra -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Título -->
        <TextView
            android:id="@+id/tituloDatosBancarios"
            android:text="@string/titulo_datos_bancarios"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Nombre del titular -->
        <EditText
            android:id="@+id/editNombre"
            android:hint="@string/hint_nombre_titular"
            android:textColorHint="#999999"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp" />

        <!-- Numero de tarjeta -->
        <EditText
            android:id="@+id/editTarjeta"
            android:hint="@string/hint_numero_tarjeta"
            android:textColorHint="#999999"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="16"
            android:layout_marginBottom="16dp" />

        <!-- Fecha de expiración -->
        <EditText
            android:id="@+id/editFecha"
            android:hint="@string/hint_fecha_expiracion"
            android:textColorHint="#999999"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginBottom="16dp" />

        <!-- CVV -->
        <EditText
            android:id="@+id/editCVV"
            android:hint="@string/hint_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:textColorHint="#999999"
            android:textColor="#000000"
            android:layout_marginBottom="24dp" />

        <!-- Boton para regresar al carrito -->
        <Button
            android:id="@+id/btnVolverCarrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_volver_carrito"
            android:layout_marginTop="12dp"
            android:backgroundTint="#3D90D7"
            android:textColor="#ffffff" />

        <!-- Boton para terminar la compra -->
        <Button
            android:id="@+id/btnFinalizarCompra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_finalizar_compra"
            android:backgroundTint="#28a745"
            android:textColor="#ffffff" />
    </LinearLayout>
</ScrollView>
